# cppug-kl-1122

./: LICENSE  README.md
version-1/: CMakeLists.txt  toolchain.cmake
version-1/src/: CMakeLists.txt  main.cpp
version-2/: CMakeLists.txt  CMakePresets.json  build-config.cmake
version-2/src/: CMakeLists.txt
version-2/src/monmgr/: CMakeLists.txt  LonelyMonster.cpp  LonelyMonster.hpp  Menagerie.cpp
version-3/: CMakeLists.txt  monmgr-config.cmake.in
version-3/cmake/monmgr/: add.cmake  install_component.cmake  target.cmake  targetname_component.cmake
version-3/src/: CMakeLists.txt
version-3/src/monmgr/: CMakeLists.txt  Menagerie.hpp  MonsterBase.hpp  main.cpp
