cmake_minimum_required (VERSION 3.24)

project (monmgr
  VERSION 0.0
)

###################################################################################################
# Project Includes
###################################################################################################

include (GNUInstallDirs)

###################################################################################################
# Project Subdirectories
###################################################################################################

add_subdirectory (3rdparty)
add_subdirectory (src)
