###################################################################################################
# Project Public Dependencies
###################################################################################################

find_package (fmt REQUIRED)

###################################################################################################
# Project Public Targets
###################################################################################################

add_executable (monmgr)

target_compile_features (monmgr
  PRIVATE
    cxx_std_17
)

target_sources (monmgr
  PRIVATE
    main.cpp
)

target_link_libraries (monmgr
  PRIVATE
    fmt::fmt-header-only
)

###################################################################################################
# Project Install PUBLIC Targets
###################################################################################################

install (
  TARGETS
    monmgr
)
