###################################################################################################
# Project Config Target
###################################################################################################

monmgr_add (library ${_ns}::config INTERFACE)

monmgr_target (compile_features ${_ns}::config
  INTERFACE
    cxx_std_${${_project_entry}_CXX_STANDARD}
)

###################################################################################################
# Project Public Dependencies
###################################################################################################

find_package (fmt REQUIRED)

###################################################################################################
# Project Public Targets
###################################################################################################

monmgr_add (executable ${_ns}::monster-menagerie)

monmgr_add (library ${_ns}::menagerie)

###################################################################################################
# Project Source
###################################################################################################

add_subdirectory (${_ns})

###################################################################################################
# Project Install Public Targets
###################################################################################################

monmgr_install_component (${_ns}
    ${_ns}::config
    ${_ns}::monster-menagerie
    ${_ns}::menagerie
)
